Implement the following contents  - Demo app install feature  - Demo app execution function  - Login to deployment cell

--- a/box-resources/en/login.html
+++ b/box-resources/en/login.html
@@ -12,15 +12,14 @@
 		<![endif]-->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-                <script src="../../appcell-resources/js/login.js"></script>
-                <script src="../../appcell-resources/js/message_en.js"></script>
+                <script src="https://demo.personium.io/HomeApplication/__/js/login.js"></script>
+                <script src="https://demo.personium.io/HomeApplication/__/js/message_en.js"></script>
 		<link href='https://fonts.googleapis.com/css?family=Raleway:400,200' rel='stylesheet' type='text/css'>
-                <link href='../../appcell-resources/css/common.css' rel='stylesheet' type='text/css'>
-                <link href='../../appcell-resources/css/login.css' rel='stylesheet' type='text/css'>
+                <link href='https://demo.personium.io/HomeApplication/__/css/common.css' rel='stylesheet' type='text/css'>
+                <link href='https://demo.personium.io/HomeApplication/__/css/login.css' rel='stylesheet' type='text/css'>
 	</head>
 <body>
-<div class="container">
-    <div class="row main_box">
+    <div class="main_box">
 	<div class="col-md-12 col-xs-12" align="center">
             <div class="outter">
                 <img id="imProfile" src="" class="image-circle-large"/>
@@ -53,17 +52,16 @@
             <table class="msg_area">
                 <tr>
                     <td class="image-error">
-                        <img id="imError" class="image-error" src="../../appcell-resources/icons/ico_error.png"/>
+                        <img id="imError" class="image-error" src="https://demo.personium.io/HomeApplication/__/icons/ico_error.png"/>
                     </td>
                     <td align="left">
-                        <label id="error_msg" class="error_msg">エラー</label>
+                        <label id="error_msg" class="error_msg">Error</label>
                     </td>
                 </tr>
             </table>
         </div>
         </div>
     </div>
-</div>
-	</body>
+</body>
 
 </html>
