--- a/box-resources/ja/settings.html
+++ b/box-resources/ja/settings.html
@@ -12,12 +12,17 @@
     <![endif]-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-    <script src="../../appcell-resources/js/common.js"></script>
+    <script src="https://demo.personium.io/HomeApplication/__/js/common.js"></script>
+    <script src="https://demo.personium.io/HomeApplication/__/js/settings.js"></script>
+    <script src="https://demo.personium.io/HomeApplication/__/js/message_ja.js"></script>
+    <!--<script src="../../appcell-resources/js/common.js"></script>
     <script src="../../appcell-resources/js/settings.js"></script>
-    <script src="../../appcell-resources/js/message_jp.js"></script>
+    <script src="../../appcell-resources/js/message_ja.js"></script>-->
     <link href='https://fonts.googleapis.com/css?family=Raleway:400,200' rel='stylesheet' type='text/css'>
-    <link href='../../appcell-resources/css/common.css' rel='stylesheet' type='text/css'>
-    <link href='../../appcell-resources/css/settings.css' rel='stylesheet' type='text/css'>
+    <link href='https://demo.personium.io/HomeApplication/__/css/common.css' rel='stylesheet' type='text/css'>
+    <link href='https://demo.personium.io/HomeApplication/__/css/settings.css' rel='stylesheet' type='text/css'>
+    <!--<link href='../../appcell-resources/css/common.css' rel='stylesheet' type='text/css'>
+    <link href='../../appcell-resources/css/settings.css' rel='stylesheet' type='text/css'>-->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
   </head>
   <body>
@@ -40,8 +45,8 @@
                                 アカウント
                               </a>
                             </div>
-                            <div id="dvApp" class="toggleButton">
-                              <a class="list-group-item toggle" href="#">
+                            <div id="dvApplication" class="toggleButton">
+                              <a class="list-group-item toggle" id="applicationToggle">
                                 アプリケーション
                               </a>
                             </div>
@@ -50,27 +55,11 @@
                                 ロール
                               </a>
                             </div>
-                            <nav>
-                              <ul class="roleMenu">
-                                <div id="dvRoleList"></div>
-                                <div>
-                                  <a class="list-group-item" href="#" data-toggle="modal" data-target="#modal-add-role">＋ 新規ロール</a>
-                                </div>
-                              </ul>
-                            </nav>
                             <div id="dvRelation" class="toggleButton" style="margin-bottom: 10px">
                               <a class="list-group-item toggle" id="relationToggle">
                                 リレーション
                               </a>
                             </div>
-                            <nav>
-                              <ul class="relationMenu">
-                                <div id="dvRelationList"></div>
-                                <div>
-                                  <a class="list-group-item" href="#" data-toggle="modal" data-target="#modal-add-relation">＋ 新規リレーション</a>
-                                </div>
-                              </ul>
-                            </nav>
                           </div>
                         </div>
                     </div>
@@ -100,6 +89,7 @@
                     <button type="button" class="btn btn-primary" id="b-del-account-ok" style="display:none">Delete</button>
                     <button type="button" class="btn btn-primary" id="b-del-relation-ok" style="display:none">Delete</button>
                     <button type="button" class="btn btn-primary" id="b-del-rellinkrole-ok" style="display:none">Delete</button>
+                    <button type="button" class="btn btn-primary" id="b-ins-bar-ok" style="display:none">OK</button>
                 </div>
             </div>
         </div>
