Implement the following correction  - JS and CSS use local files

--- a/box-resources/en/main.html
+++ b/box-resources/en/main.html
@@ -12,14 +12,19 @@
 		<![endif]-->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-                <script src="https://demo.personium.io/HomeApplication/__/js/common.js"></script>
+                <!--<script src="https://demo.personium.io/HomeApplication/__/js/common.js"></script>
                 <script src="https://demo.personium.io/HomeApplication/__/js/settings.js"></script>
-                <script src="https://demo.personium.io/HomeApplication/__/js/message_en.js"></script>
+                <script src="https://demo.personium.io/HomeApplication/__/js/message_en.js"></script>-->
+                <script src="../../appcell-resources/js/common.js"></script>
+                <script src="../../appcell-resources/js/settings.js"></script>
+                <script src="../../appcell-resources/js/message_en.js"></script>
 		<link href='https://fonts.googleapis.com/css?family=Raleway:400,200' rel='stylesheet' type='text/css'>
-                <link href='https://demo.personium.io/HomeApplication/__/css/common.css' rel='stylesheet' type='text/css'>
+                <!--<link href='https://demo.personium.io/HomeApplication/__/css/common.css' rel='stylesheet' type='text/css'>
                 <link href='https://demo.personium.io/HomeApplication/__/css/settings.css' rel='stylesheet' type='text/css'>
-                <!--<link href='../../appcell-resources/css/common.css' rel='stylesheet' type='text/css'>-->
-                <link href='https://demo.personium.io/HomeApplication/__/css/main.css' rel='stylesheet' type='text/css'>
+                <link href='https://demo.personium.io/HomeApplication/__/css/main.css' rel='stylesheet' type='text/css'>-->
+                <link href='../../appcell-resources/css/common.css' rel='stylesheet' type='text/css'>
+                <link href='../../appcell-resources/css/settings.css' rel='stylesheet' type='text/css'>
+                <link href='../../appcell-resources/css/main.css' rel='stylesheet' type='text/css'>
 <script type="text/javascript">
 //ha.user= JSON.parse(location.hash.substring(1));
 
