--- a/box-resources/en/socialgraph.html
+++ b/box-resources/en/socialgraph.html
@@ -12,12 +12,17 @@
     <![endif]-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-    <script src="https://demo.personium.io/HomeApplication/__/js/common.js"></script>
+    <!--<script src="https://demo.personium.io/HomeApplication/__/js/common.js"></script>
     <script src="https://demo.personium.io/HomeApplication/__/js/message_en.js"></script>
-    <script src="https://demo.personium.io/HomeApplication/__/js/socialgraph.js"></script>
+    <script src="https://demo.personium.io/HomeApplication/__/js/socialgraph.js"></script>-->
+    <script src="../../appcell-resources/js/common.js"></script>
+    <script src="../../appcell-resources/js/message_en.js"></script>
+    <script src="../../appcell-resources/js/socialgraph.js"></script>
     <link href='https://fonts.googleapis.com/css?family=Raleway:400,200' rel='stylesheet' type='text/css'>
-    <link href='https://demo.personium.io/HomeApplication/__/css/common.css' rel='stylesheet' type='text/css'>
-    <link href='https://demo.personium.io/HomeApplication/__/css/socialgraph.css' rel='stylesheet' type='text/css'>
+    <!--<link href='https://demo.personium.io/HomeApplication/__/css/common.css' rel='stylesheet' type='text/css'>
+    <link href='https://demo.personium.io/HomeApplication/__/css/socialgraph.css' rel='stylesheet' type='text/css'>-->
+    <link href='../../appcell-resources/css/common.css' rel='stylesheet' type='text/css'>
+    <link href='../../appcell-resources/css/socialgraph.css' rel='stylesheet' type='text/css'>
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
   </head>
   <body>
