--- a/box-resources/ja/homeapp_google_auth.html
+++ b/box-resources/ja/homeapp_google_auth.html
@@ -4,10 +4,11 @@
  <title>OpenID connect authentication completed!</title>
  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
- <script src="https://demo.personium.io/HomeApplication/__/js/common.js"></script>
+ <!--<script src="https://demo.personium.io/HomeApplication/__/js/common.js"></script>-->
+ <script src="../../appcell-resources/js/common.js"></script>
 </head>
  <body>
- <h1>”FØŠ®—¹</h1>
+ <h1>èªè¨¼å®Œäº†</h1>
  <div id="implicit">
  <script type="text/javascript">
   var token = "";
