--- a/box-resources/en/login.html
+++ b/box-resources/en/login.html
@@ -12,11 +12,15 @@
 		<![endif]-->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-                <script src="https://demo.personium.io/HomeApplication/__/js/login.js"></script>
-                <script src="https://demo.personium.io/HomeApplication/__/js/message_en.js"></script>
+                <!--<script src="https://demo.personium.io/HomeApplication/__/js/login.js"></script>
+                <script src="https://demo.personium.io/HomeApplication/__/js/message_en.js"></script>-->
+                <script src="../../appcell-resources/js/login.js"></script>
+                <script src="../../appcell-resources/js/message_en.js"></script>
 		<link href='https://fonts.googleapis.com/css?family=Raleway:400,200' rel='stylesheet' type='text/css'>
-                <link href='https://demo.personium.io/HomeApplication/__/css/common.css' rel='stylesheet' type='text/css'>
-                <link href='https://demo.personium.io/HomeApplication/__/css/login.css' rel='stylesheet' type='text/css'>
+                <!--<link href='https://demo.personium.io/HomeApplication/__/css/common.css' rel='stylesheet' type='text/css'>
+                <link href='https://demo.personium.io/HomeApplication/__/css/login.css' rel='stylesheet' type='text/css'>-->
+                <link href='../../appcell-resources/css/common.css' rel='stylesheet' type='text/css'>
+                <link href='../../appcell-resources/css/login.css' rel='stylesheet' type='text/css'>
 	</head>
 <body>
     <div class="main_box">
