Implement the following correction  - Fix Html for google authentication (Uncomment)

--- a/box-resources/ja/homeapp_google_auth.html
+++ b/box-resources/ja/homeapp_google_auth.html
@@ -40,10 +40,10 @@
           sessionStorage.setItem("sessionData", JSON.stringify(data));
           location.href = "main.html";
       }).fail(function(data) {
-          //logout();
+          logout();
       });
   } else {
-      //logout();
+      logout();
   }
 
   // Logout
